<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proofdoor</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">This device does not support BLE</string>
    <string name="start_scan_ble_button_text">Start Scan</string>
    <string name="stop_scan_ble_button_text">Stop Scan</string>
    <string name="unknown_device">unknown device</string>
    <string name="connect_button">connect</string>
    <string name="empty_ble_adress">empty address</string>
    <string name="empty_ble_name">empy ble devices name</string>
    <string name="disconnect_button">disconnect</string>
    <string name="beep_button">beep-it</string>
    <string name="battery_button">read battery</string>
    <string name="title_activity_save_device">SaveDoor</string>
    <string name="add_new_door">Add a new door</string>
    <string name="device_desc_title">Door description</string>
    <string name="device_info">information from door</string>
    <string name="device_info_title">Door Title</string>
    <string name="title_section1">title_section1</string>
    <string name="title_section2">title_section2</string>
    <string name="title_section3">title_section3</string>
    <string name="version_name">release date:2014-07-04</string>
    <string name="version_code">0.2</string>
    <string name="scan_add_devices_found">Doors found:</string>
    <string name="intro_fragment_headline_no_door">No Garage Door found</string>
    <string name="intro_fragment_headline_example_door">Garage Door, Mum</string>

    <string name="password_dialog_fragment_desc">Please enter PIN for garage door</string>
    <string name="password_dialog_fragment_title">Garage door PIN</string>
    <string name="password_dialog_fragment_cancel_text">Cancel</string>
    <string name="password_dialog_fragment_ok_text">OK</string>
    <string name="scan_ble_incorrect_pin">Incorrect PIN</string>
    <string name="scan_ble_correct_pin">correct PIN</string>
    <string name="save_device_door_name">Door name</string>
    <string name="save_device_door_address">Door address</string>
    <string name="save_device_door_description">Enter your own description of the door here</string>
    <string name="save_device_save_device_button">Save door</string>

</resources>
