<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ble_name"
        android:text="@string/empty_ble_name"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ble_address"
        android:text="@string/empty_ble_adress"
        android:textSize="20dp"
        android:layout_below="@+id/ble_name"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_button"
        android:onClick="connectButtonPressed"
        android:layout_below="@+id/ble_address"
        android:id="@+id/connect_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_button"
        android:onClick="disconnectButtonPressed"
        android:layout_below="@+id/connect_button"
        android:id="@+id/disconnect_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beep_button"
        android:onClick="beepButtonPressed"
        android:layout_below="@+id/disconnect_button"
        android:id="@+id/beep_button"
        android:enabled="false"/>

</RelativeLayout>