<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ScanBLEActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_door"
        android:id="@+id/scan_add_new_door"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_add_devices_found"
        android:id="@+id/scan_add_devices_found"
        android:textSize="20sp"
        android:layout_below="@id/scan_add_new_door"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_scan_ble_button_text"
        android:id="@+id/start_scan_ble_button"
        android:onClick="startScanning"
        android:layout_below="@id/scan_add_devices_found"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_scan_ble_button_text"
        android:id="@+id/stop_scan_ble_button"
        android:onClick="stopScanning"
        android:layout_below="@id/scan_add_devices_found"
        android:layout_alignEnd="@+id/ble_device_list" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/ble_device_list"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/stop_scan_ble_button" />
    <ImageButton
        android:id="@+id/wsi_label"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:background="@drawable/proofdoor_wsi_logo"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/ble_device_list" />


</RelativeLayout>
