<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bledoor.river.se.bledoor.SaveDevice">

    <!-- Page Title  -->
    <TextView
        android:text="@string/add_new_door"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/add_new_door" />

    <!-- Device information Title  -->
    <TextView
        android:text="@string/device_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21dp"
        android:layout_below="@id/add_new_door"
        android:id="@+id/device_info_title" />

    <!-- Device information from device -->
    <TextView
        android:text="@string/device_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21dp"
        android:id="@+id/device_info_text"
        android:layout_below="@+id/device_info_title"
        android:layout_alignParentStart="true" />

    <!-- Device description title -->
    <TextView
        android:text="@string/device_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21dp"
        android:id="@+id/device_desc_title"
        android:layout_below="@+id/device_info_text"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/device_desc"
        android:layout_below="@+id/device_desc_title"
        android:layout_alignParentStart="true"
        android:text="-----\n---" />

    <!-- Device description title -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save device"
        android:id="@+id/save_device_button"
        android:onClick="saveDeviceButtonClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
